objects/Territory2Model.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trdate1__c</fullName>
        <label>trdate1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>trname1__c</fullName>
        <label>trname1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trname2__c</fullName>
        <label>trname2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trstatus__c</fullName>
        <label>trstatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>